feat methods, endpoint data default
