# app/Http/Requests/DefaultRequest.php
@@ -1,0 +1,44 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class DefaultRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'department_id' => 'required|integer|exists:departments,id',
+        ];
+    }
+
+    /**
+     * Get the custom messages for validation errors.
+     *
+     * @return array<string, string>
+     */
+    public function messages(): array
+    {
+        return [
+
+            'department_id.required' => 'El departamento es obligatorio.',
+            'department_id.integer' => 'El ID del departamento debe ser un número entero.',
+            'department_id.exists' => 'El departamento seleccionado no existe.',
+
+        ];
+    }
+}
